[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/bullet dummy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Sprites/roundlight.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.5
height = 19.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.24581, 0.776536, 1 )
colors = PoolColorArray( 0.75, 0.28125, 0, 1, 0.335938, 0.261346, 0.217834, 1, 0.34375, 0.34375, 0.34375, 0.792593, 0.298039, 0.298039, 0.298039, 0 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "go"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="Bullet" type="Area2D" groups=["Bullets"]]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.1
color = Color( 1, 0.670588, 0.247059, 1 )
energy = 1.5

[node name="DebrisParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
lifetime_randomness = 1.0
local_coords = false
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 20 )
initial_velocity = 30.0
initial_velocity_random = 1.0
angle = 300.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DebrisParticles"]
anims/RESET = SubResource( 3 )
anims/go = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="DebrisParticles"]
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.05
color = Color( 1, 0.670588, 0.247059, 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 3

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
